syntax = "proto3";

option java_multiple_files = true;
option java_package = "generated.grpc.newwordsservice";
option java_outer_classname = "NewWordsServiceImpl";

package NewWordsService;
import "google/protobuf/empty.proto";  // Import Empty type

service NewWordsService {
    // Server returns available topic from the database
    rpc TopicRequest(google.protobuf.Empty) returns (stream Topic){}
    
    // Client sends a topic, server returns a stream of words related to the topic
    // server streaming
    rpc WordsByTopic(Topic) returns (stream WordList) {}

    // Client sends a word, server returns the word definition
    // unary
    rpc WordDefinition(Word) returns (WordDetail) {}
}
    // Message identifying a Topic
    message Topic {
        string topic = 1;
    }

    // Message identifying a list of words
    message WordList {
        string word = 1;
        string pronunciation = 2;
        string definition = 3;
        
    }

    // Message identifying a single word
    message Word {
        string word = 1;
    }

    // Message identifying word details
    message WordDetail {
        string word = 1;
        string pronunciation = 2;
        string definition = 3;
        string example = 4;
    }

